--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -38,10 +38,14 @@
             android:textColor="#000000"
             android:layout_marginBottom="16dp"/>
 
-        <com.github.mikephil.charting.charts.LineChart
-            android:id="@+id/lineChart"
+        <FrameLayout
+            android:id="@+id/courseFragmentCatainer"
             android:layout_width="match_parent"
-            android:layout_height="300dp" />
+            android:layout_height="wrap_content"/>
+<!--        <com.github.mikephil.charting.charts.LineChart-->
+<!--            android:id="@+id/lineChart"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="300dp" />-->
         <Button
             android:id="@+id/btnGotoBlood"
             android:layout_width="match_parent"
