Design : UI 리디자인 및 기능 일부 재구성

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,113 +9,9 @@
     android:layout_gravity="center"
     tools:context=".ui.LoginActivity">
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/fragment_container_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/main_color"
-        android:elevation="4dp"
-        app:theme="@style/ToolbarIconColor"
-        app:titleTextColor="#FFFFFF"/>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="20dp">
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/authEmailEditView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:startIconDrawable="@drawable/username"
-            app:endIconMode="clear_text"
-            android:hint="User Email">
-            <com.google.android.material.textfield.TextInputEditText
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/authPasswordEditView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            app:startIconDrawable="@drawable/password"
-            app:endIconMode="password_toggle"
-            android:hint="@string/password">
-            <com.google.android.material.textfield.TextInputEditText
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:inputType="textPassword"/>
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/loginBtn"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="@color/white"
-            android:backgroundTint="@color/black"
-            android:text="@string/log_in"
-            android:clickable="true"
-            android:layout_marginTop="30dp"
-            android:focusable="true" />
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/goSignInBtn"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="@color/white"
-            android:backgroundTint="@color/black"
-            android:text="Sign Up"
-            android:clickable="true"
-            android:layout_marginTop="30dp"
-            android:focusable="true" />
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/signBtn"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="@color/white"
-            android:backgroundTint="@color/black"
-            android:text="Sign Up"
-            android:clickable="true"
-            android:layout_marginTop="30dp"
-            android:focusable="true"
-            android:visibility="gone"/>
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:orientation="horizontal"
-        android:padding="20dp">
-
-        <Button
-            android:id="@+id/googleLoginBtn"
-            style="?attr/materialButtonOutlinedStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:clickable="true"
-            android:focusable="true"
-            android:drawableStart="@drawable/common_google_signin_btn_text_disabled"
-            android:text="Google login"
-            android:textColor="@color/common_google_signin_btn_text_light_default" />
-        <Button
-            android:id="@+id/kakaoLoginBtn"
-            style="?attr/materialButtonOutlinedStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_marginLeft="5dp"
-            android:clickable="true"
-            android:focusable="true"
-            android:text="Kakao login"
-            android:textColor="@color/common_google_signin_btn_text_light_default" />
-
-    </LinearLayout>
-
+        android:layout_height="match_parent" />
 
 </LinearLayout>
