--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,11 +11,12 @@
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/main_color"
+        android:layout_height="0dp"
+        android:layout_weight="1.5"
+        android:background="@color/white"
         android:elevation="4dp"
-        app:theme="@style/ToolbarIconColor"
-        app:titleTextColor="#FFFFFF"/>
+        android:paddingTop="30dp"
+        app:theme="@style/ToolbarIconColor"/>
 
 
     <!--    <com.github.mikephil.charting.charts.LineChart-->
@@ -26,7 +27,9 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="0dp"
+        android:layout_weight="8.5"
+        android:background="@color/white">
 
         <androidx.fragment.app.FragmentContainerView
             android:id="@+id/main_fragment_container"
@@ -34,12 +37,14 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             app:defaultNavHost="true"
-            android:name="androidx.navigation.fragment.NavHostFragment" />
+            android:name="androidx.navigation.fragment.NavHostFragment"
+            android:background="@color/white"/>
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/bottom_navigation"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@color/white"
             app:menu="@menu/menu_bottom_nav" />
     </LinearLayout>
 
