--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,7 +5,14 @@
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
-    <style name="Theme.Walking_hadang" parent="Base.Theme.Walking_hadang" />
+    <style name="Theme.Walking_hadang" parent="Base.Theme.Walking_hadang">
+        <!-- 상태바를 숨기지 않도록 설정 -->
+        <item name="android:windowFullscreen">false</item>
+        <!-- 상태바 색상 지정 (선택) -->
+        <item name="android:statusBarColor">@color/main_color</item>
+        <!-- 상태바 아이콘 색상 (다크/라이트) 설정 -->
+        <item name="android:windowLightStatusBar">true</item> <!-- 아이콘이 어두운 색 -->
+    </style>
 
     <style name="ToolbarIconColor" parent="ThemeOverlay.AppCompat.ActionBar">
         <item name="colorControlNormal">#FFFFFF</item>
