--- a/app/src/main/res/menu/menu_bottom_nav.xml
+++ b/app/src/main/res/menu/menu_bottom_nav.xml
@@ -13,6 +13,10 @@
         android:title="기록"
         android:icon="@drawable/ic_recoding2"/>
     <item
+        android:id="@+id/nav_market"
+        android:title="스토어"
+        android:icon="@drawable/ic_cart"/>
+    <item
         android:id="@+id/nav_community"
         android:title="커뮤니티"
         android:icon="@drawable/ic_community"/>
